--- a/androidsdk/build.gradle
+++ b/androidsdk/build.gradle
@@ -32,11 +32,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    compile 'com.android.volley:volley:1.0.0'
+    implementation 'com.android.volley:volley:1.0.0'
 
-    compile 'com.google.firebase:firebase-messaging:10.2.6'
-    compile 'com.google.android.gms:play-services-base:10.2.6'
-    compile 'com.google.android.gms:play-services-location:10.2.6'
+    implementation 'com.google.firebase:firebase-messaging:10.2.6'
+    implementation 'com.google.android.gms:play-services-base:10.2.6'
+    implementation 'com.google.android.gms:play-services-location:10.2.6'
 }
 
 ext {
