--- a/androidsdk/local.properties
+++ b/androidsdk/local.properties
@@ -9,3 +9,8 @@
 # header note.
 #Sun Mar 18 16:38:55 IST 2018
 sdk.dir=/Users/gaurav/Library/Android/sdk
+bintray.user=justgig8
+bintray.apiKey=8718ff24667a39e17a49921ea1373681f1dbad88
+
+user=justgig8
+apiKey=8718ff24667a39e17a49921ea1373681f1dbad88
